<resources>
    <string name="app_name">MDMP</string>
    <!--main-->

    <!--login activity-->
    <string name="login_login">Sign in</string>
    <string name="login_hint_account">Account</string>
    <string name="login_hint_password">Password</string>
    <string name="login_server">Select server</string>
    <!--user activity-->
    <string name="user_mgmt_title">User Management</string>
    <string name="user_mgmt_user">Users</string>
    <string name="user_mgmt_role">Role</string>
    <string name="user_mgmt_view">View permissions</string>
    <string name="user_mgmt_dept">Department</string>
    <string name="action_like">Like</string>
    <string name="action_comment">Comment</string>
    <!--server activity-->
    <string name="server_server">IP</string>
    <string name="server_port">Port</string>
    <string name="server_server_value">106.14.201.240</string>
    <string name="server_port_value">8088</string>
    <!--changePwd activity-->
    <string name="change_pwd_title">Change Password</string>
    <!--other-->
    <string name="save">Save</string>
    <string name="edit_activity_title">Edit</string>
    <string name="detailed_activity_title">Details</string>
    <string name="settings_activity_title">Settings</string>
    <string name="me_activity_title">Me</string>
    <string name="bottom_Nav_item_1">Chats</string>
    <string name="bottom_Nav_item_2">Contacts</string>
    <string name="bottom_Nav_item_3">Discover</string>
    <string name="bottom_Nav_item_4">Me</string>
    <string name="network">Network connection exception</string>















    <string name="btn_moments_text">Moments</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="minutes_ago">{count} minutes ago</string>
    <string name="hours_ago">{count} hours ago</string>
    <string name="days_ago">{count} days ago</string>
    <string name="weeks_ago">{count} weeks ago</string>
    <string name="months_ago">{count} months ago</string>
    <string name="years_ago">{count} years ago</string>
    <string name="comment_reply">\@</string>
    <string name="comment_me">me</string>


    <string name="checkBox_remember_pass">remember pass</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login2">Sign in</string>
</resources>
