<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:navigationIcon="@drawable/ic_left_back"
            app:navigationIcon="@drawable/ic_left_back"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/login_server" >
            <Button
                android:id="@+id/edit_btn_save"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="@dimen/icon_margin"
                android:background="@color/transparent"
                android:text="@string/edit_save" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/fab_size">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/primary_text"
                android:text="@string/server_server"
                android:textSize="@dimen/headings" />

            <EditText
                android:id="@+id/server_edt_server"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="17dp"
                android:background="@color/transparent"
                android:focusableInTouchMode="true"
                android:textColor="@color/secondary_text"
                android:hint="@string/server_server_value"
                android:text="@string/server_server_value" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_wide"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/view_margin"
                android:layout_marginTop="@dimen/view_margin"
                android:background="@color/divider" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/fab_size">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/primary_text"
                android:text="@string/server_port"
                android:textSize="@dimen/headings" />

            <EditText
                android:id="@+id/server_edt_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView9"
                android:layout_alignParentEnd="true"
                android:background="@color/transparent"
                android:textColor="@color/secondary_text"
                android:hint="@string/server_port_value"
                android:text="@string/server_port_value" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_wide"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/view_margin"
                android:layout_marginTop="@dimen/view_margin"
                android:background="@color/divider" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>