<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menubackground"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:navigationIcon="@drawable/ic_left_back"
            app:navigationIcon="@drawable/ic_left_back"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/change_pwd_title"/>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingEnd="28dp"
        android:paddingStart="28dp"
        android:paddingTop="40dp">

        <EditText
            android:id="@+id/change_pwd_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_margin"
            android:hint="@string/login_hint_password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/change_pwd_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/change_pwd_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword"
            android:textSize="20sp" />
        <Button
            android:id="@+id/change_btn_save"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/shape_bg_blue"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>